Avatar list: set Unknown user avatar with 0 margin, fix alignment
It seems when users are unknown we can get a different JSON bject:
Object { ViewId: "8", UserName: "Unknown", Color: 13013504, … }

This is then flagged and set as a different (from the identified
avatars) html element in createAvatar from Control.UserList.js

Better to fix the alignment via CSS

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -1649,6 +1649,10 @@ menu-entry-with-icon.padding-left + menu-entry-icon.width */
 	margin-left: -10px;
 }
 
+.user-list-item .user-info {
+	margin: 0;
+}
+
 #userListPopover {
 	display: none;
 	position: absolute;
